Made longer description (SEO)

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Contact information about our company or email of our company">
     <link rel="stylesheet" href="css/styles.css"
-    <title>Contact us</title>
+    <title>Contacting information of our company</title>
 </head>
 <body>
     <h1>Contact Us</h1>
