--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Interesting information about croissant">
+    <meta name="description" content="Interesting information about croissant, here some description about croissantcomposition, where the production of croissants was founded">
     <link rel="stylesheet" href="css/styles.css"
-    <title>Homepage</title>
+    <title>Information about croissant</title>
 </head>
 <body>
     <h1>
