--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Photo of fresh croissant">
     <link rel="stylesheet" href="css/styles.css"
-    <title>Photo</title>
+    <title>Photo of croissant</title>
 </head>
 <body>
     <h1> A picture of a croissant</h1>
