Some changes to make site SEO friendly

--- a/photo.html
+++ b/photo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Photo of fresh croissant">
-    <link rel="stylesheet" href="css/styles.css"
-    <title>Photo of croissant</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Photo of one fresh croissant, with powder and sucar,lying on the table</title>
 </head>
 <body>
     <h1> A picture of a croissant</h1>
