--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Interesting information about croissant, here some description about croissantcomposition, where the production of croissants was founded">
-    <link rel="stylesheet" href="css/styles.css"
-    <title>Information about croissant</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>A croissant is a buttery,flaky,French viennoiserie pastry</title>
 </head>
 <body>
     <h1>
@@ -13,6 +13,8 @@
     </h1>
     <h2>
         A croissant is a buttery, flaky, French viennoiserie pastry inspired by the shape of the Austrian kipferl but using the French yeast-leavened laminated dough.
+        Croissants are named for their historical crescent shape, the dough is layered with butter, rolled and folded several times in succession, then rolled into a thin sheet, in a technique called laminating. The process results in a layered, flaky texture, similar to a puff pastry.
+Crescent-shaped breads have been made since the Renaissance, and crescent-shaped cakes possibly since antiquity but using brioche dough.  
     </h2>
     <a href="index.html"> Homepage</a>
 <a href="photo.html"> Photo</a>
