Made SEO friendly of every page

--- a/photo.html
+++ b/photo.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Photo of fresh croissant">
+    <meta name="description" content="Photo of fresh croissant, with powder on it and sucar,lying on the wood table">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Photo of one fresh croissant, with powder and sucar,lying on the table</title>
+    <title>Photo of one fresh croissant, with powder and sucar</title>
 </head>
 <body>
     <h1> A picture of a croissant</h1>
-    <img src="src/croissant.jpg">
+    <img src="src/croissant.jpg" alt="Fresh croissant">
     <a href="index.html"> Homepage</a>
 <a href="photo.html"> Photo</a>
 <a href="contact.html"> Contact us</a>
