--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Contact information about our company or email of our company">
+    <meta name="description" content="Contact information about our company, how to contact us, how to find company,email of a company">
     <link rel="stylesheet" href="css/styles.css">
     <title>Contacting information of our company</title>
 </head>
